--- a/quickstart/public/index.html
+++ b/quickstart/public/index.html
@@ -27,7 +27,7 @@
         <div id="button-join"  class="log-in">Join</div>
       </a>
       <div id="button-leave" class="sign-up">Leave</div>
-      <div id="start_button" class="sign-up" onClick="startButton(event)">Show Subtitle</div>   
+      <div id="start_button" class="sign-up" onClick="startButton(event)">Show Subtitle</div>
  </div>
   </div>
 </div>
@@ -104,7 +104,7 @@
 <!--     <button id="button-preview">
       Preview My Camera
     </button> -->
-    <div id="log"></div>
+    <div id="log" style="display: none"></div>
   </div>
   <!-- CHAT COLUMN -->
   <div class="chat-column">
