--- a/quickstart/public/index.html
+++ b/quickstart/public/index.html
@@ -20,7 +20,7 @@
       <div class="title">Trailcast</div>
     </div>
     <div class="header-links">
-      <div id="go-to-room-page">Room</div>
+      <div id="go-to-browse-page">Browse</div>
       <div id="activate-stream">Present</div>
       <input id="room-name" type="text" placeholder="Room name..." />
       <a href="#" class="btn btn-block btn-info" id="startChat" onclick="startChat();">
@@ -46,48 +46,6 @@
 <div id="home-page" class="page">
   <div class="hero-text">Livestream Community</div>
   <div class="livestreams">
-    <div class="livestream">
-      <div class="bottom-bar">
-        <div class="title">Sales Keynote</div>
-        <div class="viewers">500</div>
-      </div>
-    </div>
-    <div class="livestream">
-      <div class="bottom-bar">
-        <div class="title">Sales Keynote</div>
-        <div class="viewers">500</div>
-      </div>
-    </div>
-    <div class="livestream">
-      <div class="bottom-bar">
-        <div class="title">Sales Keynote</div>
-        <div class="viewers">500</div>
-      </div>
-    </div>
-    <div class="livestream">
-      <div class="bottom-bar">
-        <div class="title">Sales Keynote</div>
-        <div class="viewers">500</div>
-      </div>
-    </div>
-    <div class="livestream">
-      <div class="bottom-bar">
-        <div class="title">Sales Keynote</div>
-        <div class="viewers">500</div>
-      </div>
-    </div>
-    <div class="livestream">
-      <div class="bottom-bar">
-        <div class="title">Sales Keynote</div>
-        <div class="viewers">500</div>
-      </div>
-    </div>
-    <div class="livestream">
-      <div class="bottom-bar">
-        <div class="title">Sales Keynote</div>
-        <div class="viewers">500</div>
-      </div>
-    </div>
   </div>
 </div>
 <div id="chat-page" class="page">
